--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [test, build, security, docker]
+    needs: [test, build, security]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
